# adk-scratchpad

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test_client.py
adk_guide/: agent_test.ipynb  simple_tutorial.md
adk_guide/mcp_test_agent/: agent.py
adk_guide/my_first_agent/: agent.py
adk_guide/workflow_agent_seq/: agent.py
agents/: .env.example
agents/ai-location-strategy/: DEVELOPER_GUIDE.md  Makefile  README.md  package-lock.json  package.json  pyproject.toml
agents/ai-location-strategy/app/: agent.py  config.py  prompt_utils.py
agents/ai-location-strategy/notebook/: retail_ai_location_strategy_gemini_3.ipynb
agents/bidi-demo-WIP/: README.md  pyproject.toml
agents/bidi-demo-WIP/app/: main.py
agents/bq_agent/: agent.py  prompts.py
agents/bq_agent/subagents/: __init__.py
agents/bq_agent/tools/: __init__.py  bq_tools.py
agents/doc_understanding/: agent.py  config.py  prompt.py
agents/google_search_agent/: Makefile  README.md  agent.py  pyproject.toml
agents/google_search_agent/.cloudbuild/: deploy-to-prod.yaml  pr_checks.yaml  staging.yaml
agents/google_search_agent/app/: agent.py
agents/rag_agent/: .env.example  .gitignore  README.md  pyproject.toml
agents/rag_agent/rag/: __init__.py  agent.py  prompts.py  tools.py
agents/rag_agent/rag/app_utils/: deploy.py  telemetry.py  typing.py
agents/rag_agent/rag/subagents/: __init__.py  evaluator_agent.py  rag_retrieval_agent.py  search_agent.py
agents/short-movie-agents/app/: server.py
agents/short_story_agent/subagents/: editor_agent.py  planner_agent.py  refiner_agent.py  writer_agent.py
agents/software-bug-assistant/: Dockerfile  README.md  __main__.py
agents/software-bug-assistant-local/: .env.example  .gcloudignore  README.md  docker-compose.yml  pyproject.toml
agents/software-bug-assistant-local/software_bug_assistant/: agent_executor.py  config.py
agents/software-bug-assistant-local/tests/: verify_local_db.py
agents/software-bug-assistant/software_bug_assistant/: agent.py  config.py  prompt.py
agents/software-bug-assistant/ui/: server.py
agents/vais_agent/: .env.example  agent.py  app.py  chainlit.md
demos/: .env.example  eval_sea_captain.py  eval_sea_captain_ae_deploy.py  memorybank_interactive.py
google_search_agent/: agent.py
short_story_agent/: __init__.py  agent.py
short_story_agent/subagents/: __init__.py  editor_agent.py  planner_agent.py  refiner_agent.py
tests/: test_bq_agent.py
(+78 files in other folders)
